refactor category attribute OAT
