# app/Http/Controllers/CategoryController.php
@@ -4,8 +4,8 @@ namespace App\Http\Controllers;
 
 use App\Dtos\WrapPagination;
 use App\Http\Requests\Category\CategoryCreateRequest;
-use App\Http\Requests\CategoryDeleteRequest;
-use App\Http\Requests\CategoryIndexRequest;
+use App\Http\Requests\Category\CategoryDeleteRequest;
+use App\Http\Requests\Category\CategoryIndexRequest;
 use App\Http\Resources\CategoryResource;
 use App\Models\Category;
 use App\Services\CategoryService;
@@ -27,10 +27,16 @@ class CategoryController extends Controller
         //
     }
 
+    /**
+     * Get a list of note category (Pagination applied).
+     *
+     * @param CategoryIndexRequest $request
+     * @return JsonResponse
+     */
     #[OAT\Get(
         tags: ['category'],
         path: '/api/category',
-        summary: 'Get a list of category of User (Pagination applied)',
+        summary: 'Get a list of category of User (Pagination applied).',
         operationId: 'CategoryController.index',
         security: [['BearerToken' => []]],
         parameters: [
@@ -77,7 +83,7 @@ class CategoryController extends Controller
             ),
         ]
     )]
-    public function index(CategoryIndexRequest $request)
+    public function index(CategoryIndexRequest $request) : JsonResponse
     {
         $limit = $request->input('limit', config('pagination.limit', 10));
         $data = $this->categoryService->categories($limit);
@@ -86,7 +92,7 @@ class CategoryController extends Controller
     }
 
     /**
-     * Create a new category of notes
+     * Create a new note category.
      *
      * @param  CategoryCreateRequest  $request
      * @return JsonResponse
@@ -94,9 +100,13 @@ class CategoryController extends Controller
     #[OAT\Post(
         tags: ['category'],
         path: '/api/category',
-        summary: 'Create a new category of notes',
+        summary: 'Create a new note category.',
         operationId: 'CategoryController.store',
         security: [['BearerToken' => []]],
+        requestBody: new OAT\RequestBody(
+            required: true,
+            content: new OAT\JsonContent(ref: "#/components/schemas/CategoryCreateRequest")
+        ),
         responses: [
             new OAT\Response(
                 response: HttpResponse::HTTP_CREATED,
@@ -117,10 +127,18 @@ class CategoryController extends Controller
         return Response::json(new CategoryResource($category), HttpResponse::HTTP_CREATED);
     }
 
+    /**
+     * Delete a note category.
+     *
+     * @param CategoryDeleteRequest $request
+     * @param Category $category
+     *
+     * @return JsonResponse
+     */
     #[OAT\Delete(
         tags: ['category'],
         path: '/api/category/{id}',
-        summary: 'Delete a category of notes',
+        summary: 'Delete a note category.',
         operationId: 'CategoryController.destroy',
         security: [['BearerToken' => []]],
         parameters: [
